--- a/highscores.html
+++ b/highscores.html
@@ -16,6 +16,7 @@
                     <th>No</th>
                     <th>Kullanıcı Adı</th>
                     <th>Skor</th>
+                    <th>Süre</th>
                 </tr>
             </thead>
             <tbody>
