--- a/admin.html
+++ b/admin.html
@@ -31,7 +31,7 @@
             </form>
         </section>
 
-        <button onclick="location.href='index.html'">Geri</button>
+        <button style="margin-top: 10px;" onclick="location.href='index.html'">Geri</button>
     </div>
     <script src="/admin.js"></script>
 </body>
