--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Admin Giriş</title>
     
 </head>
-<body style="background-image: url(images/login.jpg); background-size: cover; background-position: center; background-attachment: fixed;">
+<body>
     
     <form id="loginForm">
         <h1 style="text-align: center;">Admin Giriş Sayfası</h1>
