--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
             <input type="text" id="guessInput" placeholder="Tahmininizi yazın">
             <button id="submitGuessBtn">Gönder</button>
         </div>
-        <p id="timeDisplay">Kalan Süre: 04:00</p>
+        <p id="timeDisplay">00:00</p>
     </div>
     <div id="questionCounter">Soru: 1 / 12</div>
 
