--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <title>Kelime Oyunu</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="index">
+<body style="background-image: url('images/arka.jpg'); background-size: cover; background-position: center;" class="index">
     <div class="game-container">
         <div id="wordDisplay"></div>
         <p>Puan: <span id="scoreDisplay">0</span></p>
