--- a/highscores.html
+++ b/highscores.html
@@ -13,10 +13,10 @@
         <table id="scoreTable">
             <thead>
                 <tr>
-                    <th>No</th>
-                    <th>Kullanıcı Adı</th>
-                    <th>Skor</th>
-                    <th>Süre</th>
+                    <th style="color: yellow;">No</th>
+                    <th style="color: yellow;">Kullanıcı Adı</th>
+                    <th style="color: yellow;">Skor</th>
+                    <th style="color: yellow;">Süre</th>
                 </tr>
             </thead>
             <tbody>
