--- a/game.html
+++ b/game.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kelime Oyunu</title>
+    <style>
+        body{
+            background-image: url('images/arka.jpg');
+            background-size: cover;
+            background-position: center;
+
+        }
+    </style>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url('images/arka.jpg'); background-size: cover; background-position: center;" class="index">
+<body class="index">
     <div class="game-container">
         <div id="wordDisplay"></div>
         <p>Puan: <span id="scoreDisplay">0</span></p>
